apps/argo-istio/templates/argo-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: argocd
  name: argocd
