apps/argo-istio/templates/argo-istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: argocd
  name: argocd
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argo-gateway-https
  namespace: argocd
spec:
  selector:
    istio: ingress-central
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - argo.quest.defimagi.com
    tls:
      mode: SIMPLE # SIMPLE terminates, PASSTHROUGH... Passes through ^_^
      credentialName: argocd-ingress-certificiate # fetches certs from Kubernetes secret
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-http
  namespace: argocd
spec:
  hosts:
  - argo.quest.defimagi.com
  gateways:
  - argo-gateway-https
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: argo-cd-argocd-server
